--- a/style.css
+++ b/style.css
@@ -2,29 +2,42 @@ body {
   background: #D0E4F5 url("https://fondosmil.com/fondo/10917.jpg") no-repeat local -50px 0px;
   background-size:cover;
   font-family: 'Times New Roman', Times, serif;
-
 }
+
+section {
+  width: 80%;
+  margin: auto;
+  padding: 30px;
+}
+
+header>h1 {
+  padding: 30px;
+  background: #232323;
+  opacity: 0.7;
+  margin: 0px;
+}
+
 h1 {
   color: #FFFFFF;
-  background: #232323;
   text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #49ff18, 0 0 30px #49FF18, 0 0 40px #49FF18, 0 0 55px #49FF18, 0 0 75px #49ff18;
   color: #FFFFFF;
-  background: #232323;
   text-align: center;
-  padding: 30px;
   font-size: 45px;
+}
+
+h2 {
+  color: darkred;
+  font-size: 35px;
 
 }
-  h2{
-    color: darkred;
-    font-size: 35px;
 
-  }
-  p{
-    font-size: 25px;
-  }
-  img{
-    margin: auto;
-    display: block;
+p {
+  font-size: 25px;
+  text-align: justify;
+}
 
-  }
+img {
+  margin: auto;
+  display: block;
+
+}
